--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,4 +2,23 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+}
+
+.selected {
+  color: red;
+  text-transform: uppercase;
+}
+
+footer {
+  background-color: grey;
+  margin-top: -25px;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+.nav-link {
+  color:white;
 }
