--- a/src/styles/Europe.css
+++ b/src/styles/Europe.css
@@ -5,7 +5,7 @@
 }
 .europeBackground {
   background-image: url('./images/europeHeader.jpeg');
-  height: 1000px;
+  height: 1300px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -24,4 +24,9 @@
   color: white;
   margin-left: 10px;
   padding-top: 10px;
+}
+
+.thumbNail {
+  height: 200px;
+  width: 200px;
 }
