--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,12 +4,17 @@
 
 .Home-header {
   height: 150px;
-  padding: 20px;
   color: white;
+  font-family: fantasy;
+  padding-top: 50px;
+  margin-left: -60px;
+  font-size: 80px;
 }
 
 .Home-intro {
-  font-size: large;
+  font-size: 20px;
+  font-family: fantasy;
+  margin-left: -60px;
 }
 
 .Header {
@@ -20,7 +25,7 @@
 
 .backgroundMain {
   background-image:url('./images/homeBackground.jpg');
-  height: 1000px;
+  height: 725px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
